# geotrouvetout

./: .python-version  Dockerfile  Dockerfile.bak  Doxyfile  Makefile  README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yml
geotrouvetout/: __init__.py  __main__.py  area.py  car_detection.py  color_analysis.py  combination.py  language_detection.py  overpass.py  tree_detection.py  util.py
rest_api/: __init__.py  __main__.py
stats/: area.csv  car_sales_stats.json  carstats.json  image_histograms_country.json
tests/: area_test.py  language_detection_test.py  proba_test.py  util_test.py
tools/get_country_labels/: add_tld_to_metadata.py  country_metadata.json  country_tld_domain.json  get_country_labels.py
tools/get_gsv_img/: download_gsv.py
tools/stat_colors/: stat_colors.py
tools/stat_colors_country/: stat_colors_country.py
tools/train/: train.sh
web-extension/: manifest.json  package.json  tsconfig.json
web-extension/src/: content-script.ts
wiki/: api.md  cli.md  methods.md  tools.md  web-extension.md
